--- a/asset/css/game-screen.css
+++ b/asset/css/game-screen.css
@@ -5,18 +5,21 @@ body {
 }
 
 #pie-area {
-  height: fit-content;
+  position: relative;
+  left: 35%;
+  height: 30%;
+  width: 30%;
   align-items: center;
   cursor: pointer;
+}
+
+#pie{
+  width: 100%;
   transition: transform 0.1s;
   animation: spin 10s linear infinite;
 }
 
-#pie{
-  width: 400px;
-}
-
-#pie:active {
+#pie-area:active {
   transform: scale(0.9);
 }
 
